added announcements and details page

--- a/announcements-details.html
+++ b/announcements-details.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Associatin News Details :: Building Management</title>
+    <title>Announcements Details :: Building Management</title>
     <!-- FavIcon-->
     <link rel="shortcut icon" type="image/png" href="./assets/images/home/favIcon.png" />
     <!-- FontAwesome Kit  -->
@@ -225,39 +225,46 @@
     <!-- Header  -->
 
     <!-- Association News Details Section  -->
-     <div class="association-news-details-section-wrapper">
+     <div class="announcements-details-section-wrapper">
+        <div class="top-section">
+            <div class="container-fluid">
+                <div class="top-inner">
+                    <div class="top-date-category-wrapper">
+                        <div class="date-wrapper">
+                            <h6>2024년 9월 18일</h6>
+                        </div>
+                        <!-- <div class="category-wrapper">
+                            <h6>모범 사례</h6>
+                        </div> -->
+                    </div>
+                    <div class="news-title">
+                        <h2>건물 관리자를 위한 새로운<br/> 교육 프로그램 출시</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-fluid">
-            <div class="association-news-details-inner-wrapper">
-                <div class="top-date-category-wrapper">
-                    <div class="date-wrapper">
-                        <h6>2024년 9월 18일</h6>
-                    </div>
-                    <div class="category-wrapper">
-                        <h6>모범 사례</h6>
-                    </div>
-                </div>
-                <div class="news-title">
-                    <h2>주거용 건물의 투명한 관리 수수료를 위한 모범 사례</h2>
-                </div>
-                <div class="news-image-wrapepr">
-                    <img src="./assets/images/associationnewsdetails/association-news-details.png" alt="">
-                </div>
+            <div class="announcements-details-inner-wrapper">
+                
                 <div class="news-content-related-content-wrapper">
                     <div class="news-content-wrapper">
-                        <h4>한국건물관리협회는 주거용 건물 관리의 투명성과 공정성을 도모하고자, 투명한 관리비 지급 모범 사례에 대한 포괄적인 가이드를 발표했습니다.</h4>
+                        <div class="matters-wrapper">
+                            <h3>교육 프로그램에 대하여</h3>
+                            <p>건물 관리 분야의 최신 기술과 지식을 전문가들에게 제공하기 위해 고안된 새로운 건물 관리자 교육 프로그램 출시를 알려드리게 되어 기쁩니다.</p>
+                            <p>이 프로그램은 집합건물법 준수, 에너지 효율 전략, 디지털 관리 도구를 포함한 광범위한 필수 주제를 다룹니다.</p>
+                        </div>
+                        <div class="image-wrapper">
+                            <img src="./assets/images/announcements-details/announcements-details.png" alt="">
+                        </div>
                         <div class="key-recommendation-wrapper">
-                            <h3>주요 권장 사항:</h3>
+                            <h3>프로그램 하이라이트:</h3>
                             <ul>
                                 <li><p><span>정기 감사 및 보고</span> 정기적으로 내부 감사를 실시하고 그 결과를 주민과 공유함으로써 책임감을 강화할 수 있습니다.</p></li>
                                 <li><p><span>사용량 기반 청구</span> 가능하다면 전기, 수도 등의 공공 서비스에 대한 요금 청구를 지역 기반 요금 청구에서 사용량 기반 요금 청구로 전환하세요.</p></li>
                                 <li><p><span>예산 계획에 주민 참여</span> 연간 예산 계획 과정에 주민을 포함시키면 투명성을 크게 높일 수 있습니다.</p></li>
                             </ul>
                         </div>
-                        <div class="matters-wrapper">
-                            <h3>투명한 경영이 중요한 이유</h3>
-                            <p>투명한 관리 수수료는 건물 관리자와 거주자 간의 긍정적인 관계를 유지하는 데 필수적입니다. 수수료 구조가 명확하고 정당화될 때 분쟁 가능성이 줄어들고 공동 책임감이 생깁니다.</p>
-                            <p>투명성은 숨은 비용을 피하는 데 도움이 되며, 거주자가 재정을 보다 예측 가능하게 관리할 수 있도록 해줍니다.</p>
-                        </div>
+                        
                     </div>
                     <div class="related-content-wrapper">
                         <div class="related-inner-wrapper">
