--- a/membership-guide.html
+++ b/membership-guide.html
@@ -69,7 +69,7 @@
                                 <div class="dropdown-menu-wrapper">
                                     <div class="dropdown-box">
                                         <ul>
-                                            <li><a href="#">
+                                            <li><a href="./announcements.html">
                                                     <div class="image-box">
                                                         <img src="./assets/images/announcements.svg" alt="">
                                                     </div>
@@ -172,7 +172,7 @@
                                                         data-bs-parent="#accordionExamplemenu">
                                                         <div class="accordion-body">
                                                             <ul>
-                                                                <li><a href="#">
+                                                                <li><a href="./announcements.html">
                                                                         <div class="image-box">
                                                                             <img src="./assets/images/announcements.svg"
                                                                                 alt="">
