--- a/announcements.html
+++ b/announcements.html
@@ -339,9 +339,8 @@
                                     <div class="select-filter">
                                         <div class="form-group">
                                             <select class="form-select" aria-label="Default select example">
-                                                <option selected>최신</option>
-                                                <option>모범 사례</option>
-                                                <option>최신</option>
+                                                <option selected>최신 순</option>
+                                                <option>오래된 순</option>
                                             </select>
                                         </div>
                                     </div>
@@ -1441,13 +1440,16 @@
                                     <div class="pagination-outer-wrappers">
                                         <nav aria-label="Page navigation example">
                                             <ul class="pagination">
+                                                <li class="page-item"><a class="page-link" href="#"><span class="desktop-version">이전 페이지</span> <span class="material-symbols-outlined mobile-version">
+                                                    arrow_left_alt
+                                                </span></a></li>
                                                 <li class="page-item"><a class="page-link" href="#">1</a></li>
                                                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                                                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                                                 <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                                <li class="page-item"><a class="page-link" href="#">5</a></li>
-                                                <li class="page-item"><a class="page-link" href="#">6</a></li>
-                                                <li class="page-item"><a class="page-link" href="#">7</a></li>
+                                                <li class="page-item"><a class="page-link" href="#"><span class="desktop-version">다음 페이지</span>  <span class="material-symbols-outlined mobile-version">
+                                                    arrow_right_alt
+                                                </span></a></li>
                                             </ul>
                                         </nav>
                                     </div>
