--- a/association-news.html
+++ b/association-news.html
@@ -408,9 +408,8 @@
                                     <div class="select-filter">
                                         <div class="form-group">
                                             <select class="form-select" aria-label="Default select example">
-                                                <option selected>정책 업데이트</option>
-                                                <option>모범 사례</option>
-                                                <option>최신</option>
+                                                <option selected>최신 순</option>
+                                                <option>오래된 순</option>
                                             </select>
                                         </div>
                                     </div>
