added tender pages

--- a/job-listing-details.html
+++ b/job-listing-details.html
@@ -224,10 +224,10 @@
     </header>
     <!-- Header  -->
 
-    <!-- Announcements Top Section  -->
-    <div class="announcements-top-section-wrapper">
+    <!-- joblisting Top Section  -->
+    <div class="joblisting-top-section-wrapper">
         <div class="container-fluid">
-            <div class="announcements-top-inner">
+            <div class="joblisting-top-inner">
                 <div class="title-search-wrapper">
                     <div class="left-title">
                         <h2>구인 구직</h2>
@@ -265,113 +265,127 @@
             </div>
         </div>
     </div>
-    <!-- Announcements Top Section  -->
+    <!-- joblisting Top Section  -->
 
 
     <!-- Job Listing Details Section  -->
-    <div class="job-listing-details-section">
+    <div class="joblisting-details-section-wrapper">
         <div class="container-fluid">
-            <div class="job-listing-details-inner">
-                <div class="left-details-section">
-                    <div class="top-details">
-                        <h3>프로젝트 범위</h3>
-                        <p>한국건물관리협회에서는 팀을 지원할 의욕적이고 세부 사항 주의를 기울이는 행정 보조원을 구합니다. 이 역할에는 다양한 행정 업무를 처리하고 사무실의 효율적인 운영을
-                            보장하기 위한 주요 지원을 제공하는 것이 포함됩니다.</p>
-                    </div>
-                    <div class="bottom-details">
-                        <h3>주요 책임</h3>
-                        <h6>일반 사무 관리:</h6>
-                        <p>회의 일정 조정, 전화 대응, 서신 처리 등 일상적인 사무 업무를 관리합니다.</p>
-                        <h6>문서 관리:</h6>
-                        <p>공식 문서, 보고서 및 기록을 준비, 정리 및 유지 관리합니다. 필요에 따라 프레젠테이션 및 스프레드시트 준비를 지원합니다.</p>
-                        <h6>데이터 입력 및 기록 보관:</h6>
-                        <p>회원 정보, 재무 기록, 회의록 등 다양한 데이터베이스에 대한 데이터의 정확한 입력 및 유지 관리를 보장합니다.</p>
-                        <h6>경영팀 지원:</h6>
-                        <p>여행 준비, 일정 관리, 회의 조직 등 경영팀에 행정 지원을 제공합니다.</p>
-                    </div>
-                    <div class="bottom-details">
-                        <h6>교육:</h6>
-                        <p>고등학교 졸업장 또는 동등 학력 필수. 경영학 또는 관련 분야 학위가 선호됩니다.</p>
-                        <h6>경험:</h6>
-                        <p>최소 1-2년의 행정 또는 사무직 경험. 빌딩 관리, 부동산 또는 이와 유사한 분야에서의 이전 경험은 플러스입니다.</p>
-                    </div>
-                </div>
-                <div class="right-details-section">
-                    <div class="title-wrapper">
-                        <h3>다른 채용 공고 보기</h3>
-                    </div>
-                    <div class="related-content-box-wrapper">
-                        <div class="content-box">
-                            <a href="#">
-                                <div class="top-box-wrapper">
-                                    <div class="top-writer-box">
-                                        <p>회계</p>
-                                    </div>
-                                    <div class="job-title">
-                                        <h5>행정 보조원</h5>
-                                    </div>
-                                    <div class="job-description">
-                                        <p>일상 업무를 지원하고 일정을 관리하며 커뮤니케이션 업무를 지원합니다.</p>
-                                    </div>
-                                    <div class="category-wrapper">
-                                        <p>작성자: <span>한국경영관</span></p>
-                                    </div>
-                                </div>
-                                <div class="bottom-date">
-                                    <p>2일 전</p>
-                                </div>
-                            </a>
+            <div class="announcements-details-inner-wrapper">
+                <div class="news-content-related-content-wrapper">
+                    <div class="news-content-wrapper">
+                        <div class="matters-wrapper">
+                            <h3>프로젝트 범위</h3>
+                            <p>한국건물관리협회에서는 팀을 지원할 의욕적이고 세부 사항 주의를 기울이는 행정 보조원을 구합니다. 이 역할에는 다양한 행정 업무를 처리하고 사무실의 효율적인 운영을 보장하기 위한 주요 지원을 제공하는 것이 포함됩니다.</p>
                         </div>
-                        <div class="content-box">
-                            <a href="#">
-                                <div class="top-box-wrapper">
-                                    <div class="top-writer-box">
-                                        <p>회계</p>
-                                    </div>
-                                    <div class="job-title">
-                                        <h5>행정 보조원</h5>
-                                    </div>
-                                    <div class="job-description">
-                                        <p>일상 업무를 지원하고 일정을 관리하며 커뮤니케이션 업무를 지원합니다.</p>
-                                    </div>
-                                    <div class="category-wrapper">
-                                        <p>작성자: <span>한국경영관</span></p>
-                                    </div>
-                                </div>
-                                <div class="bottom-date">
-                                    <p>2일 전</p>
-                                </div>
-                            </a>
+                        <div class="key-recommendation-wrapper">
+                            <h3>주요 책임</h3>
+                            <div class="details-box">
+                                <h5>일반 사무 관리:</h5>
+                                <p>회의 일정 조정, 전화 대응, 서신 처리 등 일상적인 사무 업무를 관리합니다.</p>
+                            </div>
+                            <div class="details-box">
+                                <h5>문서 관리:</h5>
+                                <p>공식 문서, 보고서 및 기록을 준비, 정리 및 유지 관리합니다. 필요에 따라 프레젠테이션 및 스프레드시트 준비를 지원합니다.</p>
+                            </div>
+                            <div class="details-box">
+                                <h5>데이터 입력 및 기록 보관:</h5>
+                                <p>회원 정보, 재무 기록, 회의록 등 다양한 데이터베이스에 대한 데이터의 정확한 입력 및 유지 관리를 보장합니다.</p>
+                            </div>
+                            <div class="details-box">
+                                <h5>경영팀 지원:</h5>
+                                <p>여행 준비, 일정 관리, 회의 조직 등 경영팀에 행정 지원을 제공합니다.</p>
+                            </div>
                         </div>
-                        <div class="content-box">
-                            <a href="#">
-                                <div class="top-box-wrapper">
-                                    <div class="top-writer-box">
-                                        <p>회계</p>
-                                    </div>
-                                    <div class="job-title">
-                                        <h5>행정 보조원</h5>
-                                    </div>
-                                    <div class="job-description">
-                                        <p>일상 업무를 지원하고 일정을 관리하며 커뮤니케이션 업무를 지원합니다.</p>
-                                    </div>
-                                    <div class="category-wrapper">
-                                        <p>작성자: <span>한국경영관</span></p>
-                                    </div>
-                                </div>
-                                <div class="bottom-date">
-                                    <p>2일 전</p>
-                                </div>
-                            </a>
+                        <div class="key-recommendation-wrapper">
+                            <h3>자격:</h3>
+                            <div class="details-box">
+                                <h5>교육:</h5>
+                                <p>고등학교 졸업장 또는 동등 학력 필수. 경영학 또는 관련 분야 학위가 선호됩니다.</p>
+                            </div>
+                            <div class="details-box">
+                                <h5>경험:</h5>
+                                <p>최소 1-2년의 행정 또는 사무직 경험. 빌딩 관리, 부동산 또는 이와 유사한 분야에서의 이전 경험은 플러스입니다.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="link-wrapper">
-                        <a href="#">모든 구인공고 보기</a>
+                    <div class="related-content-wrapper">
+                        <div class="related-inner-wrapper">
+                            <h3>다른 채용 공고 보기</h3>
+                            <div class="job-listing-related-wrapper">
+                                <div class="content-box">
+                                    <a href="#">
+                                        <div class="top-box-wrapper">
+                                            <div class="top-writer-box">
+                                                <p>회계</p>
+                                            </div>
+                                            <div class="job-title">
+                                                <h5>행정 보조원</h5>
+                                            </div>
+                                            <div class="job-description">
+                                                <p>일상 업무를 지원하고 일정을 관리하며 커뮤니케이션 업무를 지원합니다.</p>
+                                            </div>
+                                            <div class="category-wrapper">
+                                                <p>작성자: <span>한국경영관</span></p>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-date">
+                                            <p>2일 전</p>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="content-box">
+                                    <a href="#">
+                                        <div class="top-box-wrapper">
+                                            <div class="top-writer-box">
+                                                <p>회계</p>
+                                            </div>
+                                            <div class="job-title">
+                                                <h5>행정 보조원</h5>
+                                            </div>
+                                            <div class="job-description">
+                                                <p>일상 업무를 지원하고 일정을 관리하며 커뮤니케이션 업무를 지원합니다.</p>
+                                            </div>
+                                            <div class="category-wrapper">
+                                                <p>작성자: <span>한국경영관</span></p>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-date">
+                                            <p>2일 전</p>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="content-box">
+                                    <a href="#">
+                                        <div class="top-box-wrapper">
+                                            <div class="top-writer-box">
+                                                <p>회계</p>
+                                            </div>
+                                            <div class="job-title">
+                                                <h5>행정 보조원</h5>
+                                            </div>
+                                            <div class="job-description">
+                                                <p>일상 업무를 지원하고 일정을 관리하며 커뮤니케이션 업무를 지원합니다.</p>
+                                            </div>
+                                            <div class="category-wrapper">
+                                                <p>작성자: <span>한국경영관</span></p>
+                                            </div>
+                                        </div>
+                                        <div class="bottom-date">
+                                            <p>2일 전</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="explore-more-btn">
+                                <a href="#">모든 구인공고 보기</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+     </div>
     <!-- Job Listing Details Section  -->
 
 
