--- a/post.html
+++ b/post.html
@@ -243,30 +243,42 @@
                         </div>
                     </div>
                     <div class="right-details-post-box">
-                        <div class="title-wrapper">
-                            <h3>상세 포스트</h3>
-                        </div>
-                        <div class="form-group">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="floatinglastname" placeholder="제목 게시물">
-                                <label for="floatinglastname">제목 게시물</label>
+                        <div class="inner-wrapper">
+                            <div class="title-wrapper">
+                                <h3>상세 포스트</h3>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>카테고리 선택</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>하위 카테고리 선택</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                            </select>
+                            <div class="form-group">
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="floatinglastname" placeholder="제목 게시물">
+                                    <label for="floatinglastname">제목 게시물</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="form-floating">
+                                    <select class="form-select" id="floatingSelect"
+                                        aria-label="Floating label select example">
+                                        <option selected>카테고리 선택</option>
+                                        <option value="카테고리 선택">카테고리 선택</option>
+                                    </select>
+                                    <label for="floatingSelect">카테고리 선택</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="form-floating">
+                                    <select class="form-select" id="floatingSelect"
+                                        aria-label="Floating label select example">
+                                        <option selected>하위 카테고리 선택</option>
+                                        <option value="하위 카테고리 선택">하위 카테고리 선택</option>
+                                    </select>
+                                    <label for="floatingSelect">하위 카테고리 선택</label>
+                                </div>
+                            </div>
+                            <div class="submit-wrapper">
+                                <button class="submit_btn" type="submit">지금 게시 중 <span
+                                        class="material-symbols-outlined">
+                                        arrow_right_alt
+                                    </span></button>
+                            </div>
                         </div>
                     </div>
                 </form>
@@ -346,20 +358,20 @@
 
     <script>
         $('#summernote').summernote({
-          placeholder: '',
-          tabsize: 2,
-          height: 120,
-          toolbar: [
-            ['style', ['style']],
-            ['font', ['bold', 'underline', 'clear']],
-            ['color', ['color']],
-            ['para', ['ul', 'ol', 'paragraph']],
-            ['table', ['table']],
-            ['insert', ['link', 'picture', 'video']],
-            ['view', ['fullscreen', 'codeview', 'help']]
-          ]
+            placeholder: '',
+            tabsize: 2,
+            height: 120,
+            toolbar: [
+                ['style', ['style']],
+                ['font', ['bold', 'underline', 'clear']],
+                ['color', ['color']],
+                ['para', ['ul', 'ol', 'paragraph']],
+                ['table', ['table']],
+                ['insert', ['link', 'picture', 'video']],
+                ['view', ['fullscreen', 'codeview', 'help']]
+            ]
         });
-      </script>
+    </script>
 
 </body>
 
